--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document!!!</title>
 </head>
 <body>
-    <h1>Git hub in vs code</h1>
+    <h1>Git hub in vs code!!!</h1>
+    <h3>Alert examples in vs code</h3>
 </body>
 </html>
